# django-environment-highlight

./: .gitignore  MANIFEST.in  README.md  setup.cfg
environment_highlight/: __init__.py  apps.py  context_processors.py
environment_highlight/templates/admin/: base_site.html
